--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.5.3",
     "react-native-web": "~0.11.7",
-    "mem": ">=4.0.0"
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^2.0.12"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
