--- a/reviewApp/package.json
+++ b/reviewApp/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.5",
     "expo": "~36.0.0",
+    "formik": "^2.1.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -20,7 +21,8 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
-    "react-navigation-stack": "^2.0.15"
+    "react-navigation-stack": "^2.0.15",
+    "yup": "^0.28.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
